--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/policy-tutorial-ui.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/policy-tutorial-ui.mdx
@@ -198,7 +198,7 @@ Tiers are a hierarchical construct used to group policies and enforce higher pre
 
 ### Policy processing overview
 
-When a new connection is processed by {{prodname}}, each tier that contains a policy that selects the endpoint processes the connection. Tiers are sorted by their order - the smallest number first. Policies in each tier are then processed in order from the smallest to largest.
+When a new connection is processed by {{prodname}}, each tier that contains a policy that selects the endpoint processes the connection. Tiers are sorted by their order - the smallest number first. Policies in each tier are then processed in order from lowest to highest. For example, a policy of 800 is ordered before a policy of order 1000.
 
 - If a network policy or global network policy in the tier allows or denies the connection, then evaluation is done: the connection is handled accordingly.
 
@@ -235,9 +235,6 @@ Action defines what should happen when a connection matches this rule.
 The following topics go into further detail about concepts described in this tutorial:
 
 - [Get started with network policy](../beginners/calico-network-policy.mdx)
-
 - [Service account selectors](../beginners/policy-rules/service-accounts.mdx)
-
 - [Get started with tiered network policy](tiered-policy.mdx)
-
 - [Get started with network sets](../networksets.mdx)
