--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -143,20 +143,21 @@ Azure Route Server deployment is per VNet, as such each VNet with egress gateway
 
 It is possible to establish BGP connections between all {{prodname}} nodes and Azure Route Servers, but
 to avoid hitting Azure Route Server peers [limit](https://learn.microsoft.com/en-us/azure/route-server/overview#route-server-limits),
-it is better to select some nodes as Route Reflectors and set up BGP connections between those and Azure Route Server.
-The number of Route Reflectors depends on the cluster size, but it is recommended to have at least 3 at all times,
+it is better to select some nodes as route reflectors and set up BGP connections between those and Azure Route Server.
+The number of route reflectors depends on the cluster size, but it is recommended to have at least 3 at all times,
 and Azure Route Servers supports up to 8 peers in a VNet.
 
 ### Create Azure Route Server
 
 Deploy Azure [Route Server](https://learn.microsoft.com/en-us/azure/route-server/) in the VNet with egress gateways,
-and add the chosen Route Reflectors as peers to it.
+and add the chosen route reflectors as peers to it.
 
 :::note
 
-- The BGP connections between Calico Route Reflectors and Azure Route Servers are critical for the functionality
-of egress gateways. It is important to maintain Route Reflectors with care, and to make sure there are always
-enough healthy Route Reflectors.
+- The BGP connections between Calico route reflectors and Azure Route Servers are critical for the functionality
+of egress gateways. It is important to maintain route reflectors with care, and to make sure there are always
+enough healthy route reflectors.
+- If possible, assign a static address to the route reflectors so after reboots the same address is kept.
 - In AKS, it is [recommended](https://learn.microsoft.com/en-us/azure/aks/use-system-pools?tabs=azure-cli#system-and-user-node-pools)
 to run applications in user node pools and leave system node pools for running critical system pods.
 The nodes in system node pools are perfect Route Reflector candidates.
@@ -171,14 +172,15 @@ To do this, modify the default **BGP configuration** resource.
 Run the following command to disable the BGP full-mesh:
 
 ```batch
-calicoctl patch bgpconfiguration default -p '{"spec": {"nodeToNodeMeshEnabled": false}}'
+kubectl apply -f - <<EOF
+apiVersion: projectcalico.org/v3
+kind: BGPConfiguration
+metadata:
+  name: default
+spec:
+  nodeToNodeMeshEnabled: false
+EOF
 ```
-
-:::note
-
-If the default BGP configuration resource does not exist, you need to create it first. See [BGP configuration](../../reference/resources/bgpconfig.mdx) for more information.
-
-:::
 
 :::note
 
@@ -248,7 +250,7 @@ spec:
   exportV4:
     - action: Accept
       matchOperator: In
-      cidr: 10.10.10.0/31
+      cidr: 10.10.10.0/30
 EOF
 ```
 
@@ -263,13 +265,13 @@ must have a cluster ID - typically an unused IPv4 address.
 To configure a node to be a route reflector with cluster ID 244.0.0.1, run the following command:
 
 ```batch
-calicoctl patch node my-node -p '{"spec": {"bgp": {"routeReflectorClusterID": "244.0.0.1"}}}'
+calicoctl patch node <node name> -p '{"spec": {"bgp": {"routeReflectorClusterID": "244.0.0.1"}}}'
 ```
 
 Typically, you will want to label this node to indicate that it is a route reflector, allowing it to be easily selected by a BGPPeer resource. You can do this with kubectl. For example:
 
 ```batch
-kubectl label node my-node route-reflector=true
+kubectl label node <node name> route-reflector=true
 ```
 
 Now it is easy to configure route reflector nodes to peer with each other and other non-route-reflector nodes using label selectors. For example:
@@ -477,10 +479,9 @@ httpProbe:
   timeoutSeconds: 30
   intervalSeconds: 10
   ```
-[comment]: <> (XXX is this not necessary to be updated?)
 - Please refer to the [operator reference docs](../../reference/installation/api.mdx) for details about the Egress Gateway resource type.
 
-:::Note
+:::note
 
 *  It is advisable to have more than one egress gateway per group, so that the egress IP function
 continues if one of the gateways crashes or needs to be restarted.  When there are multiple
@@ -488,7 +489,7 @@ gateways in a group, outbound traffic from the applications using that group is 
 across the available gateways.  The number of `replicas` specified must be less than or equal
 to the number of free IP addresses in the IP Pool.
 
-*  IPPool can be specified either by its name (e.g. `-name: egress-ip-red-pool`) or by its CIDR (e.g. `-cidr: 10.10.10.0/31`).
+*  IPPool can be specified either by its name (e.g. `-name: egress-ip-red-pool`) or by its CIDR (e.g. `-cidr: 10.10.10.0/30`).
 
 *  The labels are arbitrary. You can choose whatever names and values are convenient for
 your cluster's Namespaces and Pods to refer to in their egress selectors.
@@ -538,7 +539,7 @@ metadata:
     egress.projectcalico.org/selector: egress-code == 'red'
     egress.projectcalico.org/namespaceSelector: projectcalico.org/name == '<egress_gw_namespace>'
   name: my-client,
-  namespace: my-namespace,
+  namespace: <namespace>,
 spec:
   ...
 EOF
@@ -586,7 +587,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-netcat-pod
-  namespace: my-namespace
+  namespace: <namespace>
 spec:
   containers:
   - name: alpine
@@ -599,7 +600,7 @@ EOF
 Now you can use `kubectl exec` to initiate an outbound connection from that pod:
 
 ```batch
-kubectl exec <pod name> -n <pod namespace> -- nc <server IP> 8089 </dev/null
+kubectl exec <pod name> -n <namespace> -- nc <server IP> 8089 </dev/null
 ```
 
 where `<server IP>` should be the IP address of the netcat server.
